[gd_scene load_steps=16 format=2]

[ext_resource path="res://scenes/menus/race_main_menu.gd" type="Script" id=1]
[ext_resource path="res://Asset/screen.png" type="Texture" id=2]
[ext_resource path="res://fonts/pablo-impallari_dosis/Dosis-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://fonts/pablo-impallari_dosis/Dosis-SemiBold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Asset/UI/KenneyBasePack/blue_panel_9p.png" type="Texture" id=5]
[ext_resource path="res://scenes/circuits/circuit_2/circuit_2.png" type="Texture" id=6]
[ext_resource path="res://Asset/UI/KenneyBasePack/buton_normal.tres" type="StyleBox" id=7]
[ext_resource path="res://Asset/UI/KenneyBasePack/buton_pressed.tres" type="StyleBox" id=8]
[ext_resource path="res://Asset/UI/KenneyBasePack/buton_disable.tres" type="StyleBox" id=9]

[sub_resource type="DynamicFont" id=1]

size = 40
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="StyleBoxFlat" id=2]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 1, 1, 1, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1

[sub_resource type="StyleBoxFlat" id=3]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 1, 1, 1, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1

[sub_resource type="DynamicFont" id=4]

size = 36
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=5]

size = 40
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=6]

size = 40
use_mipmaps = true
use_filter = true
extra_spacing_char = 1
font_data = ExtResource( 3 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[node name="Menu" type="Node2D"]

script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
centered = false
offset = Vector2( 0, -120 )
_sections_unfolded = [ "Offset" ]

[node name="Label" type="Label" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 290.0
margin_top = 20.0
margin_right = 452.0
margin_bottom = 82.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Race Laps"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "custom_colors", "custom_fonts" ]

[node name="Laps" type="LineEdit" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 470.0
margin_top = 30.0
margin_right = 530.0
margin_bottom = 76.0
rect_pivot_offset = Vector2( 0, 0 )
hint_tooltip = "click to edit"
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 3
size_flags_vertical = 4
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/minimum_spaces = 1
text = "33"
align = 1
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "custom_constants" ]

[node name="Title" type="Label" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 881.0
margin_top = 20.0
margin_right = 1202.0
margin_bottom = 93.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Players"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin" ]

[node name="PlayerPanel" type="NinePatchRect" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 865.0
margin_top = 80.0
margin_right = 1216.0
margin_bottom = 688.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 5 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
_sections_unfolded = [ "Axis Stretch", "Patch Margin" ]

[node name="Players" type="VBoxContainer" parent="PlayerPanel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 15.0
margin_top = 11.0
margin_right = 336.0
margin_bottom = 598.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Margin" ]

[node name="PanelCircuit" type="NinePatchRect" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 207.0
margin_top = 171.0
margin_right = 648.0
margin_bottom = 526.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 5 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
_sections_unfolded = [ "Axis Stretch", "Patch Margin" ]

[node name="Circuit" type="Sprite" parent="." index="6"]

position = Vector2( 425.063, 345.603 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 6 )
_sections_unfolded = [ "Transform" ]

[node name="Next" type="Button" parent="." index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 674.0
margin_top = 318.0
margin_right = 781.0
margin_bottom = 403.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/focus = ExtResource( 7 )
custom_styles/disabled = ExtResource( 9 )
custom_styles/normal = ExtResource( 7 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color_disabled = Color( 0.414062, 0.414062, 0.414062, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.828125, 0.828125, 0.828125, 1 )
custom_colors/font_color_pressed = Color( 0.988281, 0.424652, 0.424652, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = ">>"
flat = false
align = 1
_sections_unfolded = [ "Margin" ]

[node name="Previous" type="Button" parent="." index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 72.0
margin_top = 325.0
margin_right = 179.0
margin_bottom = 410.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/focus = ExtResource( 7 )
custom_styles/disabled = ExtResource( 9 )
custom_styles/normal = ExtResource( 7 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color_disabled = Color( 0.414062, 0.414062, 0.414062, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.828125, 0.828125, 0.828125, 1 )
custom_colors/font_color_pressed = Color( 0.988281, 0.424652, 0.424652, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "<<"
flat = false
align = 1
_sections_unfolded = [ "Margin" ]

[node name="Race" type="Button" parent="." index="9"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 301.0
margin_top = 588.0
margin_right = 550.0
margin_bottom = 673.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/focus = ExtResource( 7 )
custom_styles/disabled = ExtResource( 9 )
custom_styles/normal = ExtResource( 7 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color_disabled = Color( 0.414062, 0.414062, 0.414062, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.828125, 0.828125, 0.828125, 1 )
custom_colors/font_color_pressed = Color( 0.988281, 0.424652, 0.424652, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Race >>>"
flat = false
align = 1
_sections_unfolded = [ "Margin" ]

[node name="Camera" type="Camera2D" parent="." index="10"]

position = Vector2( 640, 360 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false

[connection signal="text_changed" from="Laps" to="." method="_on_laps_changed"]

[connection signal="text_entered" from="Laps" to="." method="_on_laps_changed"]

[connection signal="pressed" from="Next" to="." method="_on_next_circuit"]

[connection signal="pressed" from="Previous" to="." method="_on_previous_circuit"]

[connection signal="pressed" from="Race" to="." method="_on_Race"]


